# apps/server/ADWAIS/src/Api/DTOs/Users/Requests/CreateUserRequestDto.cs
@@ -8,7 +8,8 @@ namespace Adwais.Api.DTOs.Users;
 
 public record CreateUserRequestDto(
     string Email,
-    UserRole Role
+    UserRole Role,
+    Guid? OrganizationId = null
 );
 
 
